gcp_deployment/team15/yaml_files/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-config"}'
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: default
      containers:
        - name: backend
          image: registry.gitlab.com/kdg-ti/integratieproject-2/2024-2025/team15/backend-game-service:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cloudsql
              mountPath: /cloudsql
            - name: secret-volume
              mountPath: /secrets
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
          args:
          - "--structured-logs"
          - "--port=5432"
          - "ip2-deployment-testing-16:europe-central2:ip2-deployment-testing-16-pg-instance"
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: secret-volume
              mountPath: /secrets
              readOnly: true
      imagePullSecrets:
        - name: gitlab-registry-secret 
      volumes:
          - name: cloudsql
            emptyDir: {}
          - name: secret-volume
            secret:
              secretName: db-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
