gcp_deployment/team15/yaml_files/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      priorityClassName: high-priority
      containers:
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
          args:
          - "--structured-logs"
          - "--port=5432"
          - "test-team10-444609:europe-central2:test-team10-444609-pg-instance"
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: secret-volume-keycloak
              mountPath: /secrets
              readOnly: true
        - image: quay.io/keycloak/keycloak:25.0.5
          name: keycloak
          ports:
            - containerPort: 8180
            - containerPort: 9000
          args:
            - "start"
            - "--http-port=8180"
            - "--import-realm"
            - "--verbose"
          volumeMounts:
            - name: realm-export
              mountPath: /opt/keycloak/data/import/realm-export.json
              subPath: realm-export.json
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: realm-export
          configMap:
            name: keycloak-realm
        - name: secret-volume-keycloak
          secret:
              secretName: db-credentials-keycloak
        - name: postgres-idp-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      name: port1
      port: 8180
      targetPort: 8180
    - protocol: TCP
      name: port2
      port: 9000
      targetPort: 9000
